--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ HEADLESS=true
 TARGET_TYPE=web
 
 # Comma-separated test case numbers to run (like tc01, tc02, etc.)
-TC= 
+TC= 03,04
 
 
 # Comma-separated test Suite name to run (regression, sanity )
-TEST_SUITE= regression, sanity
+TEST_SUITE= sanity
