Changes to regressiont test case titles to run selectively

--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ HEADLESS=true
 # Target type for test context: sdk | web
 TARGET_TYPE=web
 
-# Comma-separated test case numbers to run (like tc01, tc02, etc.)
-TC= 03,04
+# Comma-separated test case numbers to run (like tc01, tc02, leave it blank to run all the test cases under regression or sanity etc.)
+TC=
 
 
-# Comma-separated test Suite name to run (regression, sanity )
-TEST_SUITE= sanity
+# Comma-separated test Suite name to run (regression or sanity, leave it blank to run all the test cases)
+TEST_SUITE=
